[tool.poetry]
name = "datasetlabeler"
version = "0.1.0"
description = ""
authors = ["mcagri <mehmet.cagri.calpur@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.19.5"
pymongo = "^4.7.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
